--- a/src/home/Tarjeta.css
+++ b/src/home/Tarjeta.css
@@ -6,11 +6,8 @@
 }
 
 .InfoTarjeta{
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-    margin-left: 10px;
-    margin-top: 10px;
+ display: flex;
+ align-items: center;
 }
 
 .IconoCompartirTarjeta{
